--- a/style.css
+++ b/style.css
@@ -2,12 +2,26 @@
   font-family: "Mortal Kombat 3";
   src: url("./assets/fonts/MortalKombat3-Regular.eot");
   src: url("./assets/fonts/MortalKombat3-Regular.eot?#iefix") format("embedded-opentype"),
-    url("./assets/fonts/MortalKombat3-Regular.woff2") format("woff2"),
-    url("./assets/fonts/MortalKombat3-Regular.woff") format("woff"),
-    url("./assets/fonts/MortalKombat3-Regular.ttf") format("truetype");
+  url("./assets/fonts/MortalKombat3-Regular.woff2") format("woff2"),
+  url("./assets/fonts/MortalKombat3-Regular.woff") format("woff"),
+  url("./assets/fonts/MortalKombat3-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+}
+
+@keyframes border-animation-player
+{
+    0% { border: 1px; }
+    100% { border: 10px solid LimeGreen; }
+
+}
+
+@keyframes border-animation-enemy
+{
+    0% { border: 0px; }
+    80% { border: 10px solid Crimson; }
+    100%  { border: 1px; }
 }
 
 *,
@@ -50,6 +64,8 @@ body {
   position: relative;
 }
 
+
+
 .initpage .title {
   position: absolute;
   font-family: "Mortal Kombat 3";
@@ -78,6 +94,24 @@ body {
   max-width: 100%;
   max-height: 100%;
   height: 100%;
+}
+
+.initpage .enemy {
+  position: absolute;
+  width: 210px;
+  height: 367px;
+  z-index: 3;
+  bottom: 44px;
+  left: 50%;
+  margin-left: -105px;
+  transform: translate(205%, 0px);
+}
+
+.initpage .enemy img {
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
+  transform: scaleX(-1);
 }
 
 .initpage .parent {
@@ -139,12 +173,15 @@ body {
 .initpage .character.active:before {
   content: "";
   display: block;
-  width: calc(100% + 8px);
-  height: calc(100% + 8px);
-  top: -4px;
-  left: -4px;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  top: -2px;
+  left: -2px;
   position: absolute;
-  border: 14px solid #21aa21;
+  border: 10px solid LimeGreen;
+  z-index: 4;
+  animation: border-animation-player 0.3s ease;
+
 }
 .initpage .character.disabled {
   cursor: default;
@@ -155,6 +192,19 @@ body {
 
 .initpage .character img {
   width: 100%;
+}
+
+
+.initpage .character.active-enemy:before {
+  content: "";
+  display: block;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  top: -2px;
+  left: -2px;
+  position: absolute;
+  z-index: 3;
+  animation: border-animation-enemy 0.3s ease;
 }
 
 .wall-left {
